# jamii-afya

./: .gitignore
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/JamiiAfya/: settings.py
backend/apps/audit/: admin.py  models.py  views.py
backend/apps/contributions/: admin.py  apps.py  models.py  urls.py  views.py
backend/apps/emergencies/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/groups/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/mpesa/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
backend/apps/notifications/: admin.py  models.py  tasks.py  views.py
backend/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/config/: celery.py  settings.py  urls.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.css  helpers.js  main.jsx  routes.jsx
frontend/src/api/: auth.js  axios.js  claims.js  contributions.js  donations.js  emergencies.js  hospitals.js  upload.js
frontend/src/components/: CircularProgress.jsx  ConfirmModal.jsx  Layout.jsx  LoadingSpinner.jsx  ModalContribute.jsx  ModalDonate.jsx  NavBar.jsx  ProgressBar.jsx  SnackBar.jsx  StatusChip.jsx
frontend/src/context/: AuthContext.jsx  SnackContext.jsx
frontend/src/hooks/: useAdmin.js  useAuth.js  useClaims.js  useContribute.js  useDonate.js  useMyContributions.js  useMyDonations.js
frontend/src/pages/: AdminDashboard.jsx  ClaimDetail.jsx  History.jsx  Home.jsx  Login.jsx  NewClaim.jsx
